--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.12.0",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.3",
+    "styled-components": "^6.3.8",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
