--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mediasoup": "^3.19.14",
     "nodemon": "^3.1.11",
     "socket.io": "^4.8.3"
   }
